# Rust_web_service

./: Cargo.toml  Dockerfile
src/: main.rs
src/handlers/: get_image_handler.rs  greet_handler.rs  list_dir_handler.rs  mod.rs  neko_api_handler.rs  say_name_handler.rs  upload_handler.rs
src/routes/: routes.rs
