[package]
name = "web_service_example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.6", features = ["multipart"] }
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.183", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors"] }
serde_json = "1.0.140"
mime_guess = "2.0.5"
rand = "0.9.0"
reqwest = {version = "0.12.15", features = ["json"]}
uuid = {version = "1.16.0", features = ["v4"]}
